added hibernate app

--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,10 @@
             <version>1.18.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.3.7.Final</version>
+        </dependency>
     </dependencies>
 </project>
