added mongoDB app

--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.3.7.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.8.2</version>
+        </dependency>
     </dependencies>
 </project>
